--- a/trunk/239-dataMining-svm/.project
+++ b/trunk/239-dataMining-svm/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>239-dataMining-svm</name>
+	<name>KNN239</name>
 	<comment></comment>
 	<projects>
 	</projects>
